--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,8 @@ crispy-bootstrap5==2025.6
 Django==6.0
 django-crispy-forms==2.5
 django-environ==0.12.0
+git-filter-repo==2.47.0
+gunicorn==23.0.0
+packaging==25.0
 psycopg2==2.9.11
 sqlparse==0.5.5
